<resources>
    <string name="app_name">Story Dicoding App</string>

    <string name="password">Password</string>

    <string name="error_password">Password at least must be 8 characters length!</string>
    <string name="error_email">Email is Invalid!</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="add_your_description_here">Add your description here...</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
</resources>